<resources>
    <string name="app_name">Candystore</string>
    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="label_name">Name</string>
    <string name="label_price">Price</string>
    <string name="button_add">Add</string>
    <string name="button_back">Back</string>
    <string name="title_activity_update">UpdateActivity</string>

</resources>
