<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ari.candystore.MainActivity">
    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:icon="@drawable/reload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_add"
        android:title="Add"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@android:drawable/ic_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update"
        android:title="@string/action_update"
        android:icon="@android:drawable/ic_input_get"
        app:showAsAction="ifRoom" />
</menu>
