<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_insert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ari.candystore.InsertActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/label_name"
        android:layout_marginTop="51dp"
        android:id="@+id/label_name" />

    <TextView
        android:text="@string/label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_name"
        android:layout_marginTop="50dp"
        android:id="@+id/label_price" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_name"
        android:layout_alignBottom="@+id/label_name"
        android:layout_marginLeft="50dp"
        android:id="@+id/input_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/label_price"
        android:layout_alignBottom="@+id/label_price"
        android:layout_alignLeft="@+id/input_name"
        android:layout_alignParentRight="true"
        android:inputType="numberDecimal"
        android:id="@+id/input_price" />

    <Button
        android:text="@string/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_price"
        android:layout_centerHorizontal="true"
        android:onClick="insert"
        android:layout_marginTop="50dp"
        android:id="@+id/button_add" />

    <Button
        android:text="@string/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button_add"
        android:onClick="goBack"
        android:layout_marginTop="50dp" />

</RelativeLayout>
